--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,8 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+	<div class="jumbotron">
+      <div class="container">
+        <h1>Welcome to Readio</h1>
+        <p>Narrated news, blogs and stories.</p>
+        <p>Submit blog posts or article urls to us. If we like them we'll read, record and send them back to you to listen.
+        <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
+      </div>
+    </div>
