--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -2,7 +2,7 @@
       <div class="container">
         <h1>Welcome to Readio</h1>
         <p>Narrated news, blogs and stories.</p>
-        <p>Submit blog posts or article urls to us. If we like them we'll read, record and send them back to you to listen.
+        <p>Submit any blog post or article via URLs. We'll read, record and send them back for you to listen to.	
         <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
       </div>
     </div>
