--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,8 +1,8 @@
 	<div class="jumbotron">
       <div class="container">
-        <h1>Welcome to Readio</h1>
+        <h1>Welcome to Readio,</h1>
         <p>Narrated news, blogs and stories.</p>
-        <p>Submit any blog post or article via URLs. We'll read, record and send them back for you to listen to.	
+        <p>Submit any blog post or article via URLs. If we like the content, we'll read it, record it and send the audio back to you for listening.	
         <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
       </div>
     </div>
