--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -2,7 +2,7 @@
       <div class="container">
         <h1>Welcome to Readio,</h1>
         <p>Narrated news, blogs and stories.</p>
-        <p>Submit any blog post or article via URLs. If we like the content, we'll read it, record it and send the audio back to you for listening.	
+        <p>Submit any blog post or, story or article. If we like the content, we'll read it, record it and send the audio back to you for listening.	
         <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
       </div>
     </div>
