--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,9 @@
     <br/>
     </div>
     <div class="col-md-6">
+    <%= f.input :author %>
+    <%= f.input :provider %>
+    <%= f.input :thumbnail_url %>
     <div class="well">
     <h3> Admin </h3>
       <% if user_signed_in? %>
