--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,5 +1,5 @@
  <% @posts.each do |post| %>
-      <div class="row  clearfix">
+      <div class="  clearfix" >
         <%= link_to image_tag(post.image.url(:thumbnail) || "http://res.cloudinary.com/dnffmpcmo/image/upload/v1439982461/logo-100.png", :class => "pull-left thumbnail img-responsive" , :style=> "margin-right:10px;"), user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %>
         <h4> <%= link_to post.title, user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %>
         <br/>
@@ -17,7 +17,7 @@
             <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
             <%= link_to tag, tag_path(tag) %></label>
             <% end %>
-        <% end %>   
+        <% end %> 
+             <br/><br/> <hr/>  
       </div>
-
     <% end %>
