--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="pull-left" style=" margin-right: 10px; margin-top: 5px; display:inline;">
+      <div class="pull-left" style=" margin-right: 10px; margin-top: 5px;margin-left: 5px; display:inline;">
       <div class="one" ></div>
       <div class="two" ></div>
       <div class="three" ></div>
