--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -2,13 +2,62 @@
 </div>
 
 
-
-
-  <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio well" role="application" aria-label="media player">
 <h1><%= link_to @post.title, @post, :target => "_blank" %>
 <br/>
 <small>via <%= link_to @post.user.name, @post.user.profile, :target => "_blank" %></small>
+</h1>
+ <label class="label label-success">
+
+     <i class="glyphicon glyphicon-play"></i> 
+
+     <%= pluralize(@post.plays.to_i, 'play') %>
+   </label>&nbsp;
+  <% @post.tag_list.each do |tag| %>
+      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
+      <%= link_to tag, tag_path(tag), :target => "_blank" %></label>
+  <% end %>
+  <br/><br/>
+
+<div id="jquery_jplayer_audio_1" class="jp-jplayer"></div>
+
+<div id="jp_container_audio_1" class="jp-flat-audio" role="application" aria-label="media player">
+  <div class="jp-play-control jp-control">
+    <button class="jp-play jp-button" role="button" aria-label="play" tabindex="0"></button>
+  </div>
+  <div class="jp-bar">
+    <div class="jp-seek-bar jp-seek-bar-display"></div>
+    <div class="jp-seek-bar">
+      <div class="jp-play-bar"></div>
+      <div class="jp-details"><span class="jp-title" aria-label="title"></span></div>
+      <div class="jp-timing"><span class="jp-duration" role="timer" aria-label="duration"></span></div>
+    </div>
+  </div>
+  <div class="jp-no-solution">
+    Media Player Error<br />
+    Update your browser or Flash plugin
+  </div>
+</div>
+
+
+ <h6><%= link_to 'Readio', root_path, class: 'nav navbar-brand pull-right', :style => "color:black;", target: "_blank" %></h6>
+ <a href="<%= root_path %>" target="_blank" >
+ <div class="pull-right" style="  margin-top: 5px;margin-left: 5px; display:inline;">
+      <div class="one" ></div>
+      <div class="two" ></div>
+      <div class="three" ></div>
+      <div class="four" ></div>
+      <div class="five" ></div>
+      <div class="six" ></div>
+      <div class="seven" ></div>
+</div> 
+</a>
+     
+
+<!--   <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+<div id="jp_container_1" class="jp-audio well" role="application" aria-label="media player">
+<h1><%#= link_to @post.title, @post, :target => "_blank" %>
+<br/>
+<small>via <%#= link_to @post.user.name, @post.user.profile, :target => "_blank" %></small>
 </h1>
   <div class="jp-type-single">
     <div class="jp-gui jp-interface">
@@ -39,13 +88,13 @@
     <div class="jp-details">
       <div class="jp-title" aria-label="title">&nbsp;</div>
     </div>
-    <!-- <div class="jp-no-solution">
+    <div class="jp-no-solution">
       <span>Update Required</span>
       To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div> -->
+    </div>
   </div>
 </div>
-
+ -->
 <style type="text/css">
 
 
@@ -113,24 +162,56 @@ $(document).ready(function(){
 
 
 
-        $("#jquery_jplayer_1").jPlayer({
-        ready: function () {
-          $(this).jPlayer("setMedia", {
-            title: "<%=raw @post.title %>",
-            m4a: 'http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>',
-            oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
-          });
-        },
-        cssSelectorAncestor: "#jp_container_1",
-        swfPath: "/js",
-        supplied: "m4a, oga",
-        useStateClassSkin: true,
-        autoBlur: false,
-        smoothPlayBar: true,
-        keyEnabled: true,
-        remainingDuration: true,
-        toggleDuration: true
+      //   $("#jquery_jplayer_1").jPlayer({
+      //   ready: function () {
+      //     $(this).jPlayer("setMedia", {
+      //       title: "<%=raw @post.title %>",
+      //       m4a: 'http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>',
+      //       oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
+      //     });
+      //   },
+      //   cssSelectorAncestor: "#jp_container_1",
+      //   swfPath: "/js",
+      //   supplied: "m4a, oga",
+      //   useStateClassSkin: true,
+      //   autoBlur: false,
+      //   smoothPlayBar: true,
+      //   keyEnabled: true,
+      //   remainingDuration: true,
+      //   toggleDuration: true
+      // });
+
+    $("#jquery_jplayer_audio_1").jPlayer({
+    ready: function(event) {
+      $(this).jPlayer("setMedia", {
+        title: "Miaow - Hidden",
+        mp3: "http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>",
+        oga: "http://jplayer.org/audio/ogg/Miaow-02-Hidden.ogg"
       });
+    },
+    play: function() { // Avoid multiple jPlayers playing together.
+      $(this).jPlayer("pauseOthers");
+    },
+    timeFormat: {
+      padMin: false
+    },
+    swfPath: "js",
+    supplied: "mp3,oga",
+    cssSelectorAncestor: "#jp_container_audio_1",
+    useStateClassSkin: true,
+    autoBlur: false,
+    smoothPlayBar: true,
+    remainingDuration: true,
+    keyEnabled: true,
+    keyBindings: {
+      // Disable some of the default key controls
+      loop: null,
+      muted: null,
+      volumeUp: null,
+      volumeDown: null
+    },
+    wmode: "window"
+  });
 
 
         $('.jp-play').on('click', function(e){
