--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -4,7 +4,7 @@
 
 <h1><%= link_to @post.title, user_post_url(user_id: @post.user.profile.slug, id: @post.slug), :target => "_blank" %>
 <br/>
-<small>via <%= link_to @post.user.name, vanity_profile_url(@post.user.profile.slug), :target => "_blank" %></small>
+<small>via <%= link_to @post.user.name, vanity_profile_url(@post.user.profile.slug) , :target => "_blank" %></small>
 </h1>
  <label class="label label-success">
 
@@ -23,6 +23,7 @@
 <div id="jp_container_audio_1" class="jp-flat-audio" role="application" aria-label="media player">
   <div class="jp-play-control jp-control">
     <button class="jp-play jp-button" role="button" aria-label="play" tabindex="0"></button>
+
   </div>
   <div class="jp-bar">
     <div class="jp-seek-bar jp-seek-bar-display"></div>
@@ -140,8 +141,12 @@
     cursor: pointer;
     z-index: 2;
     background-size:cover;
+
 }
 
+h1 {
+    margin-top:0px; 
+}
 
 .middle {
   margin: auto !important;
@@ -158,7 +163,7 @@
 $(document).ready(function(){
 
 
-  $('#cover').prepend('<div class="col-md-12"><div class="well pull-left clearfix"><div class=""></div><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div>')
+  $('#cover').prepend('<br/><div class="col-md-12"><div class="well pull-left clearfix"><div class=""></div><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div>')
 
 
 
@@ -181,12 +186,12 @@ $(document).ready(function(){
       //   toggleDuration: true
       // });
 
-    $("#jquery_jplayer_audio_1").jPlayer({
+   
+  $("#jquery_jplayer_audio_1").jPlayer({
     ready: function(event) {
       $(this).jPlayer("setMedia", {
         title: "Miaow - Hidden",
-        mp3: "http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>",
-        oga: "http://jplayer.org/audio/ogg/Miaow-02-Hidden.ogg"
+        mp3: "http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>"
       });
     },
     play: function() { // Avoid multiple jPlayers playing together.
@@ -215,6 +220,8 @@ $(document).ready(function(){
 
 
         $('.jp-play').on('click', function(e){
+
+          $('#jp_container_audio_1').addClass('jp-state-playing');
     
           e.preventDefault();
  
@@ -223,13 +230,13 @@ $(document).ready(function(){
 
         });
 
-          $('body').on('click', function(e){
-        e.preventDefault;
-         $('#cover img').remove();
-         $('#embed').fadeIn();
-        $('#cover').fadeOut();
-        $("#jquery_jplayer_1").jPlayer().play();
-  
+        $('body').on('click', function(e){
+            e.preventDefault;
+            $('#cover img').remove();
+            $('#embed').fadeIn();
+            $('#cover').fadeOut();
+            $("#jquery_jplayer_audio_1").jPlayer("play");
+           $('#jp_container_audio_1').addClass('jp-state-playing');
       });
 
 
