--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -138,6 +138,7 @@
     position: absolute;
     content: '';
     background-image:url("<%= @post.image.url(:embed_cover) %>"); 
+     background-color:white !important; 
     width: 100%;
     height: 100%;
     cursor: pointer;
