--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,8 +1,13 @@
 	<div class="jumbotron">
       <div class="container">
-        <h1>Welcome to Readio,</h1>
-        <p>Narrated news, blogs and stories.</p>
-        <p>Signup to submit any blog post, story or news article. We'll read it, record it and send the audio back to you to listen to.	
+        <h1>Welcome to Readio,
+        <br/>
+        <small>Narrated news, blogs and stories.</small>
+        </h1>
+        <br/>
+        <p>Signup to submit any blog post, story or news article. We'll read it, record it and send the audio back for you to listen to.	
+        </p>
+        <br/>
         <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
       </div>
     </div>
