--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -11,3 +11,18 @@
         <p><a class="btn btn-primary btn-lg" href="<%= new_user_registration_path %>" role="button">Join Us</a></p>
       </div>
     </div>
+
+    <style type="text/css">
+
+    body {
+        background: url(http://www.elon.xyz/wp-content/uploads/2015/08/bg-warm.jpg)  no-repeat center center fixed !important;
+        -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+    }
+
+     .jumbotron {
+        opacity: 0.75 !important;
+     }
+    </style>
