--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 <meta name="og:description" content="<%= @post.summary %>">
 <meta property="og:site_name" content="Readio" />
 <meta property="og:image:url" content="<%= @post.image.url(:thumb) %>" />
-<meta property="og:audio" content="http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
+<meta property="og:audio" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
 <% end %>
 <meta property="og:audio:type" content="audio/vnd.facebook.bridge" />
 <% end %>
