--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
 
 <meta property="og:title" content="<%= @post.title %>" />
 <meta property="og:type" content="music.song" />
-<meta property="og:url" content="<%= vanity_post_url(id: @post.id, :user_id => 2post.user.name) %>" />
+<meta property="og:url" content="<%= vanity_post_url(id: @post.id, :user_id => @post.user.name) %>" />
 <meta name="og:description" content="<%= @post.summary %>">
 <meta property="og:site_name" content="Readio" />
 <meta property="og:image:url" content="<%= @post.image.url(:thumb) %>" />
