--- a/app/views/profiles/listens.html.erb
+++ b/app/views/profiles/listens.html.erb
@@ -36,6 +36,7 @@
 <ul class="nav nav-pills">
   <li role="presentation" ><a href="<%= vanity_profile_path(@profile) %>">Uploads</a></li>
   <li role="presentation" class="active"><a href="<%= vanity_listens_path(@profile) %>">Listens</a></li>
+  <li role="presentation" class=""><a href="<%= vanity_favourites_path(@profile) %>">Favourites</a></li>
 </ul>
 <br/>
 
