--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,8 @@
 <meta name="twitter:image:src" content="<%= @post.image.url(:thumb) %>">
 <meta name="twitter:domain" content="elon.xyz">
 <meta name="twitter:player" content="https://elon.herokuapp.com<%= player_path(:user_id => @post.user.profile.slug, :id => @post.slug) %>">
+<meta name="twitter:player:width" content="300px">
+<meta name="twitter:player:height" content="300px">
 
 <meta property="og:title" content="<%= @post.title %>" />
 <meta property="og:type" content="music.song" />
