--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 <meta name="twitter:creator" content="@<%= @post.user.profile.display_name %>">
 <meta name="twitter:image:src" content="<%= @post.image.url(:thumb) %>">
 <meta name="twitter:domain" content="elon.xyz">
-<meta name="twitter:player" content="<%= player_url(:user_id => @post.user.profile.slug, :id => @post.slug) %>">
+<meta name="twitter:player" content="https://www.readioapp.xyz/<%= player_path(:user_id => @post.user.profile.slug, :id => @post.slug) %>">
 <meta name="twitter:player:width" content="350px">
 <meta name="twitter:player:height" content="350px">
 
@@ -196,9 +196,9 @@
 
  <% if user_signed_in? %>
     <% if  UserFav.where(:user_id => current_user.id, :post_id => @post.id).exists? %>
-            <%= link_to raw("<i class='glyphicon glyphicon-heart-empty'></i>  Un-Favourite"), delete_user_favs_path(:user_fav => {:post_id => @post.id, :user_id => current_user.id}), :remote => true, class: "btn fav btn-default btn-large", :method => :delete %>
+            <%= link_to raw("<i class='glyphicon glyphicon-heart-empty'></i>  Un-Favourite"), delete_user_favs_path(:user_fav => {:post_id => @post.id, :user_id => current_user.id}), :remote => true, class: "btn fav btn-default btn-md", :method => :delete %>
         <% else %>
-          <%= link_to raw("<i class='glyphicon glyphicon-heart'></i>  Favourite"), user_favs_path(:user_fav => {:post_id => @post.id,:user_id => current_user.id}), :remote => true, class: "btn fav btn-large btn-default", :method => :post %>
+          <%= link_to raw("<i class='glyphicon glyphicon-heart'></i>  Favourite"), user_favs_path(:user_fav => {:post_id => @post.id,:user_id => current_user.id}), :remote => true, class: "btn fav btn-md btn-default", :method => :post %>
     <% end %>
    <% end %>
 
