--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
 <meta name="twitter:card" content="player">
-<meta name="twitter:site" content="@elon">
+<meta name="twitter:site" content="@morganric">
 <meta name="twitter:title" content="<%= @post.title %>">
 <meta name="twitter:description" content="<%= @post.summary %>">
 <meta name="twitter:creator" content="@<%= @post.user.profile.display_name %>">
