--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,9 +23,8 @@
 <meta property="og:audio" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
 <meta property="og:audio:url" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
 <meta property="og:video:url" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
-<meta property="og:secure_url" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
+<meta property="og:audio:secure_url" content="https://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>" />
 <% end %>
-<meta property="og:audio:title" content="<%= @post.title %>" />
 <meta property="og:audio:type" content="audio/vnd.facebook.bridge" />
 <% end %>
 
