--- a/app/views/profiles/favourites.html.erb
+++ b/app/views/profiles/favourites.html.erb
@@ -34,9 +34,9 @@
 <hr/>
 
 <ul class="nav nav-pills">
-  <li role="presentation" ><a href="<%= vanity_profile_path(@profile) %>">Uploads</a></li>
-  <li role="presentation" class=""><a href="<%= vanity_listens_path(@profile) %>">Listens</a></li>
-  <li role="presentation" class="active"><a href="<%= vanity_favourites_path(@profile) %>">Favourites</a></li>
+  <li role="presentation" class=""><a href="<%= vanity_profile_path(@profile) %>"><i class="glyphicon glyphicon-cloud-upload"></i> Uploads</a></li>
+  <li role="presentation" class=""><a href="<%= vanity_listens_path(@profile) %>"><i class="glyphicon glyphicon-headphones"></i> Listens</a></li>
+  <li role="presentation" class="active"><a href="<%= vanity_favourites_path(@profile) %>"> <i class="glyphicon glyphicon-heart"></i>Favourites</a></li>
 </ul>
 <br/>
 
