--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <h3>User</h3>
-<p>Name: <%= @user.name if @user.name %></p>
+<p>Name: <%= link_to @user.name , vanity_profile_path(@user.profile.slug) %></p>
+<p>id: <%= @user.id if @user.id %></p>
 <p>Email: <%= @user.email if @user.email %></p>
