--- a/app/assets/stylesheets/readable.css
+++ b/app/assets/stylesheets/readable.css
@@ -17,11 +17,12 @@ body {
   margin-bottom: 60px;
 }
 .footer {
+
+  margin-top: 100px;
   position: relative;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-
   background-color: #f5f5f5;
 }
 
