--- a/app/views/posts/facebook.html.erb
+++ b/app/views/posts/facebook.html.erb
@@ -3,7 +3,7 @@
 
 <h1 class="">
   <%= image_tag("logo.png", :height => "50") %>
-    Readio<br/>
+    Readio Facebook<br/>
     <small>
       Narrated news, blogs and stories
     </small>
