--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -25,4 +25,9 @@
      .jumbotron {
         opacity: 0.75 !important;
      }
+
+
+     .footer {
+      position: absolute !important;
+     }
     </style>
