--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <div class="row">
+  <div class=" col-md-12">
+  <div class="col-md-8">
     <h3>Users</h3>
     <div class="column">
       <table class="table">
@@ -11,6 +12,9 @@
           <% end %>
         </tbody>
       </table>
+    </div>
+    </div>
+        <div class="col-md-4">
     </div>
   </div>
 </div>
