--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -24,7 +24,7 @@
     <li><%= link_to 'Upmin', '/admin' %></li>
     <li><%= link_to 'Users', users_path %></li>
     <li><%= link_to 'Posts', posts_admin_path %></li>
-
+    <li><%= link_to 'Invite Codes', invitecodes_path %></li>
     </ul>
     </li>
   <% end %>
