--- a/app/views/invitecodes/show.html.erb
+++ b/app/views/invitecodes/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
@@ -6,13 +5,8 @@
 </p>
 
 <p>
-  <strong>Ammount:</strong>
-  <%= @invitecode.ammount %>
-</p>
-
-<p>
-  <strong>Users:</strong>
-  <%= @users.count %>
+<strong>Used:</strong>
+	<%= @users.count %>
 </p>
 
 <%= link_to 'Edit', edit_invitecode_path(@invitecode) %> |
